# NoirGuard

./: .gitignore  .pylintrc  Dockerfile  README.md  cleanup.bat  pr_audit.py  pyproject.toml  run_audit.py  setup.bat  setup.sh  test_pr.bat
.github/workflows/: deploy.yml
app/: __init__.py  agent.py  github_client.py  main.py  orchestrator.py  scanner.py  validator.py
docs/: architecture.md
tests/: __init__.py  test_agent.py  test_main.py  test_orchestrator.py  test_scanner.py  test_validator.py  vulnerable_app.py
